k8s/05.app/02.fortio.yaml
apiVersion: v1
kind: Service
metadata:
  name: fortio
  namespace: default
  labels:
    app: fortio
    service: fortio
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: fortio
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortio
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fortio
      version: v1
  template:
    metadata:
      annotations:
        # This annotation causes Envoy to serve cluster.outbound statistics via 15000/stats
        # in addition to the stats normally served by Istio.  The Circuit Breaking example task
        # gives an example of inspecting Envoy stats.
        sidecar.istio.io/statsInclusionPrefixes: cluster.outbound,cluster_manager,listener_manager,http_mixer_filter,tcp_mixer_filter,server,cluster.xds-grpc
      labels:
        app: fortio
        version: v1
    spec:
      containers:
      - name: fortio
        image: fortio/fortio:latest_release
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http-fortio
        - containerPort: 8079
          name: grpc-ping
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: fortio-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 8080
        name: http
        protocol: HTTP
      hosts:
        - fortio.local.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fortio
  namespace: default
spec:
  hosts:
    - fortio.local.com
  gateways:
    - fortio-gateway
  http:
    - match:
        - uri:
            exact: "/"
      rewrite:
        uri: "/fortio"
      route:
        - destination:
            host: fortio
            port:
              number: 8080
    - route:
        - destination:
            host: fortio
            port:
              number: 8080
