k8s/05.app/04.tornado.yaml
apiVersion: v1
kind: Service
metadata:
  name: tornado
  namespace: default
  labels:
    app: tornado
    service: tornado
spec:
  ports:
    - port: 8888
      name: http
  selector:
    app: tornado
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tornado
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tornado
      version: v1
  template:
    metadata:
      labels:
        app: tornado
        version: v1
    spec:
      containers:
        - name: tornado
          image: hiroakis/tornado-websocket-example
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8888
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: tornado-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 8080
        name: http
        protocol: HTTP
      hosts:
        - tornado.local.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tornado
  namespace: default
spec:
  hosts:
    - tornado.local.com
  gateways:
    - tornado-gateway
  http:
    - route:
        - destination:
            host: tornado
            port:
              number: 8888
